# urban-education-data-query

./: README.md  add_embeddings_to_knowledge_graph.ipynb  build_full_knowledge_graph.ipynb  connect_graphRAG-Construct-Cypher-Query.ipynb  connect_graphRAG-Embeddings.ipynb  fake_acuity_data.ipynb  pull_urban_education_data.ipynb  pyproject.toml  see_knowledge_graph.ipynb  setup_knowledge_graph.ipynb  utils.py
